--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>838679366640-nq64a5a8c55i0913b4urkvla1mf1sh32.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.838679366640-nq64a5a8c55i0913b4urkvla1mf1sh32</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>838679366640-uvbg3llio9fm74atv6ksj4sm0m00piir.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBCY4sMpnLhEnsluJVn34GsKY0-hDh6RDs</string>
 	<key>GCM_SENDER_ID</key>
