--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -6,3 +6,4 @@ android.enableJetifier=true
 org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
+android.enableDexingArtifactTransform=false
