--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dependencies:
   rxdart: ^0.27.7
   permission_handler: ^11.3.1
   firebase_analytics: ^10.10.5
+  shared_preferences: ^2.2.3
+  firebase_core_platform_interface: ^5.0.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  get: ^4.6.6
 
 
 dev_dependencies:
